spacing fixes

--- a/src/css/imports/_variables.scss
+++ b/src/css/imports/_variables.scss
@@ -2,10 +2,15 @@ $family-primary:'proxima-nova', sans-serif;
 $size-5: 1rem !default;
 $size-6: 0.9rem !default;
 $size-7: 0.7rem !default;
-$size-4: 1.25rem !default;
-$size-3: 1.8rem !default;
+$size-4: 1.8rem !default;
+$size-3: 2.4rem !default;
 $size-2: 3.1rem !default;
 $size-1: 4.5rem !default;
+$title-color: black;
+$title-line-height: 2.4rem;
+$body-color: black;
+$subtitle-color: black;
+$section-padding: 120px 80px;
 $footer-background-color: #F1F0EC;
 $link: #4D5051;
 
